--- a/bin/install
+++ b/bin/install
@@ -1,25 +1,24 @@
 #!/bin/bash
 
-DK_INS_DIR=/usr/local/bin
+LOG_DIR=~/log
+[ -d ${LOG_DIR} ] || mkdir -p ${LOG_DIR}
+DK_INS_DIR=~/bin
+[ -d ${DK_INS_DIR} ] || mkdir -p ${DK_INS_DIR}
 SDK_URL=https://dl.google.com/android/android-sdk_r24.4.1-linux.tgz
 NDK_URL=http://dl.google.com/android/repository/android-ndk-r12b-linux-x86_64.zip
 BAZEL_GPG_URL=https://storage.googleapis.com/bazel-apt/doc/apt-key.pub.gpg
 
-cat >> ~/.bashrc <<'EOF'
-
-# http://github.com/ornew/tensorflow-android
-export ORNEW_HOME=~/ornew
-DK_INS_DIR=/usr/local/bin
-export ANDROID_HOME=${DK_INS_DIR}/android-sdk-linux
-export ANDROID_NDK_HOME=${DK_INS_DIR}/android-ndk-r12b
-export PATH=${PATH}:${ANDROID_HOME}/tools:${ANDROID_HOME}/platform-tools
-export PATH=${PATH}:${ANDROID_NDK_HOME}
-EOF
-
-cat /etc/lsb-release
-apt-get update && apt-get install -y wget git unzip
+{
+cat <<EOS
+### $(date '+%Y/%m/%d %T')
+============================ install tensorflow-android
+EOS
+    cat /etc/lsb-release
+    apt-get update && apt-get install -y wget git unzip
+} 2>&1 | tee -a ${LOG_DIR}/tensorflow-android.log
 
 install_java () {
+    echo '============================ install java'
     apt-get update && apt-get install -y software-properties-common
     echo | add-apt-repository ppa:webupd8team/java
     echo debconf shared/accepted-oracle-license-v1-1 select true | debconf-set-selections
@@ -27,19 +26,49 @@ install_java () {
     apt-get update && apt-get install -y oracle-java8-installer
 }
 install_bazel () {
+    echo '============================ install bazel'
     echo "deb http://storage.googleapis.com/bazel-apt stable jdk1.8" | tee /etc/apt/sources.list.d/bazel.list
-    wget -qO - ${BAZEL_GPG_URL} | apt-key add -
+    wget -nv -qO - ${BAZEL_GPG_URL} | apt-key add -
     apt-get update && apt-get install -y bazel
 }
 install_sdk () {
-    wget ${SDK_URL} -O - | tar zx -C ${DK_INS_DIR}
+    echo '============================ install android-sdk'
+    wget ${SDK_URL} -nv -O - | tar zx -C ${DK_INS_DIR}
 }
 install_ndk () {
-    wget ${NDK_URL} -O /tmp/ndk.zip && unzip /tmp/ndk.zip -d ${DK_INS_DIR}
+    echo '============================ install android-ndk'
+    wget ${NDK_URL} -nv -O /tmp/ndk.zip && unzip -q /tmp/ndk.zip -d ${DK_INS_DIR}
+    echo "unzip: to ${DK_INS_DIR} exit ${?}."
 }
 
-install_java && install_bazel & install_sdk &
-install_ndk &
+install_java 2>&1 | tee ${LOG_DIR}/install_java.log\
+    && install_bazel 2>&1 | tee ${LOG_DIR}/install_bazel.log & \
+       install_sdk 2>&1 | tee ${LOG_DIR}/install_sdk.log &
+install_ndk 2>&1 | tee ${LOG_DIR}/install_ndk.log &
 wait
 
+cat >> ~/.bashrc <<EOF
+
+# http://github.com/ornew/tensorflow-android
+export ORNEW_HOME=~/ornew
+export ANDROID_HOME=${DK_INS_DIR}/android-sdk-linux
+export ANDROID_NDK_HOME=${DK_INS_DIR}/android-ndk-r12b
+EOF
+cat >> ~/.bashrc <<'EOF'
+export PATH=${PATH}:${ANDROID_HOME}/tools:${ANDROID_HOME}/platform-tools
+export PATH=${PATH}:${ANDROID_NDK_HOME}
+EOF
+
 source ~/.bashrc
+
+cat ${LOG_DIR}/install_java.log >> ${LOG_DIR}/tensorflow-android.log
+cat ${LOG_DIR}/install_bazel.log >> ${LOG_DIR}/tensorflow-android.log
+cat ${LOG_DIR}/install_sdk.log >> ${LOG_DIR}/tensorflow-android.log
+cat ${LOG_DIR}/install_ndk.log >> ${LOG_DIR}/tensorflow-android.log
+rm ${LOG_DIR}/install_java.log ${LOG_DIR}/install_bazel.log \
+   ${LOG_DIR}/install_sdk.log ${LOG_DIR}/install_ndk.log
+
+{
+    echo '============================ clean'
+    apt-get clean
+} 2>&1 | tee -a ${LOG_DIR}/tensorflow-android.log
